--- a/historyStyle.css
+++ b/historyStyle.css
@@ -36,6 +36,7 @@ body{
     text-transform: uppercase;
     font-weight: bold;
     font-family: 'Montserrat', sans-serif;
+    color: #c0392b;
 }
 
 .logo{
@@ -48,6 +49,13 @@ h1{
     text-transform: uppercase;
 }
 
+
+.ParkerRow>h1{
+    text-align: center;
+    color: #c0392b;
+}
+
+
 .ParkerRow{
     background-color: #ecf0f1;
     padding: 1.2em;
@@ -57,7 +65,49 @@ h1{
     text-indent: 2em;
 }
 
-.abandonedCats{
+.centerContent{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+.aboutUsRow{
     display: flex;
     justify-content: center;
 }
+
+.box{
+    display: flex;
+    flex: 1;
+    justify-content: center;
+    text-align: left;
+    align-items: center;
+    flex-direction: column;
+    padding: 1em;
+}
+
+.employmentRow{
+    color: white;
+    background-color: #16a085;
+    text-align: center;
+}
+
+.employmentRow>h3>span{
+    text-transform: uppercase;
+    text-decoration: underline;
+}
+
+.bottomRow{
+    font-weight: bolder;
+    color: #c0392b;
+    background-color:#81ecec ;
+    text-align: center;
+}
+
+.bottomRow>h3>span{
+    text-transform:capitalize;
+}
+
+
+
