--- a/rescue.css
+++ b/rescue.css
@@ -9,3 +9,16 @@
     flex-direction: row;
     justify-content: space-evenly;
 }
+body{ background-color: lightsalmon
+    ;}
+    .kitten{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
+
+    .cat{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
