--- a/staffpage.css
+++ b/staffpage.css
@@ -1,10 +1,12 @@
 img{
     border: 2px solid rgb(0, 0, 0);
     background-color: black;
+    
 }
 body{
   color:black;
     background-color:rgb(236, 179, 73);
+    
 }
 .Staff{
 display: flex;
@@ -15,18 +17,20 @@ justify-content: space-around;
     display: flex;
     justify-content: space-around;
 }
-h1{
+h1
+{
     font-family: 'Dosis', sans-serif;
-color: #000000;
+   color: #2A9D8F;
 
 }
 p{
     font-family: 'Dosis', sans-serif;
-color: #000000;
+    color: #2A9D8F;
 font-size: large;
 }
 h2{
     font-family: 'Dosis', sans-serif;
+    color: #2A9D8F;
 }
 .Jarae{
     display: flex;
@@ -168,4 +172,8 @@ h2{
     background-color: #264653;
     color: ;
     transform: rotateY(180deg);
+  }
+  h4{
+    color: #2A9D8F;
+    font-family: 'Dosis', sans-serif;
   }
