--- a/home.css
+++ b/home.css
@@ -100,6 +100,8 @@ li {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-left: 200px;
+  margin-right: 100px;
   font-size: 80px;
   font-weight: bolder;
   color: #F4A261;
@@ -137,7 +139,7 @@ li {
   transform: rotateY(180deg);
 }
 
-.flip-card-front, .flip-card-back {
+.flip-card-front,.flip-card-front-1, .flip-card-front-2, .flip-card-front-3, .flip-card-back, .flip-card-back-1, .flip-card-back-2, .flip-card-back-3 {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -157,4 +159,137 @@ li {
   background-color: #264653;
   color: ;
   transform: rotateY(180deg);
+}
+
+.flip-card-front-1 {
+  background-color: #E9C46A;
+  color: #264653;
+}
+
+.flip-card-back-1 {
+  background-color: #264653;
+  color: ;
+  transform: rotateY(180deg);
+}
+
+.flip-card-front-2 {
+  background-color: #264653;
+  color: ;
+}
+
+.flip-card-back-2 {
+  background-color: #264653;
+  color: ;
+  transform: rotateY(180deg);
+}
+
+.flip-card-front-3 {
+  background-color: #cfab4f;
+  color: #264653;
+}
+
+.flip-card-back-3 {
+  background-color: #264653;
+  color: ;
+  transform: rotateY(180deg);
+}
+
+/* Rescue Request btn */
+
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  display: inline-block;
+  border: none;
+  background-color: white;
+}
+
+input[type=text]:focus, input[type=password]:focus {
+  background-color: white;
+  outline: none;
+}
+
+button {
+  background-color: #264653;
+  color: #F4A261;
+  font-size: 35px;
+  padding: 14px 20px;
+  margin-left: 100px;
+  margin-right: 5px;
+  margin-bottom: 20px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  width: 100%;
+  opacity: 0.9;
+}
+
+button:hover {
+  opacity:1;
+}
+
+.cancelbtn {
+  padding: 14px 20px;
+  background-color: ;
+}
+
+.cancelbtn, .requestbtn {
+  float: left;
+  width: 50%
+}
+
+.container {
+  padding: 16px;
+}
+
+.rescue {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: white;
+  padding-top: 50px;
+}
+
+.rescue-request-content {
+  background-color: #2A9D8F;
+  margin: 5% auto 15% auto;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+hr {
+  border: 1px solid #f1f1f1;
+  margin-bottom: 25px;
+}
+
+.close {
+  position: absolute;
+  right: 35px;
+  top: 15px;
+  font-size: 40px;
+  font-weight: bold;
+  color: ;
+}
+
+.close:hover, .close:focus {
+  color: ;
+  cursor: pointer;
+}
+
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+@media screen and (max-width: 300px) {
+  .cancelbtn, .requestbtn {
+    width: 100%
+  }
 }
