--- a/home.css
+++ b/home.css
@@ -293,3 +293,15 @@ hr {
     width: 100%
   }
 }
+
+/* livestream style */
+
+.Lvideo {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding-top: 40px;
+    /*padding-bottom: 40px;
+    padding-left: 80px;*/
+}
