updated M profile, links

--- a/home.css
+++ b/home.css
@@ -305,3 +305,37 @@ hr {
     /*padding-bottom: 40px;
     padding-left: 80px;*/
 }
+
+/* profile style */
+
+.profileRow{
+  align-items: center;
+}
+.contentCenter{
+  align-items: center;
+  display: flex;
+  padding: 20px;
+  width: 100%;
+}
+
+.pix {
+  padding: 30px;
+}
+
+.profile{
+  padding: 30px;
+}
+
+.title{
+  background-color: #8e44ad;
+  color: white;
+  padding: 2px;
+  padding-left: 20px;
+}
+
+.content{
+  background-color: white;
+  padding:5px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
