--- a/historyStyle.css
+++ b/historyStyle.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+*/
 
 /* *{
     box-sizing: border-box;
@@ -12,7 +13,7 @@ html, body, ul, li{
 
 body{
     display: flex;
-    font-family:'Montserrat', sans-serif;
+    /*font-family:'Montserrat', sans-serif;*/
     flex-direction: column;
 }
 
@@ -46,6 +47,8 @@ body{
     text-align: center;
 }
 */
+
+
 h1{
     text-transform: uppercase;
 }
