--- a/home.css
+++ b/home.css
@@ -1,3 +1,14 @@
+body {
+  display: flex;
+  /*font-family:'Montserrat', sans-serif;*/
+  flex-direction: column;
+}
+
+h1 {
+  text-transform: uppercase;
+}
+
+
 * {
   margin: 0;
   padding: 0;
@@ -11,6 +22,7 @@ a {
 li {
   list-style: none;
 }
+
 
 .navbar {
   display: flex;
@@ -244,7 +256,7 @@ button:hover {
   font-size: 40px;
 }
 
-.rescue {
+.rescuebutton {
   display: none;
   position: fixed;
   z-index: 1;
@@ -257,7 +269,7 @@ button:hover {
   padding-top: 50px;
 }
 
-.rescue-request-content {
+.rescuebutton-request-content {
   background-color: #2A9D8F;
   margin: 5% auto 15% auto;
   border: 1px solid #888;
